--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<div class="holder">
+		<div id="one">1</div>
+		<div id="two">2</div>
+		<div id="three">3</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
